--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.2.0",
-    "source-map-loader": "^1.1.0",
-    "uuid": "^3.3.2"
+    "source-map-loader": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -28,7 +27,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
-    "eslint": "^6.1.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
@@ -40,8 +39,8 @@
     "mini-css-extract-plugin": "^0.8.0",
     "prettier": "^1.18.2",
     "style-loader": "^1.0.0",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
